2009-08-28  Mike Kestner <mkestner@novell.com>

	* MainWindow.cs : load and save History class. add LogInfo items
	to history when new profiles are created and loaded.

2009-08-27  Mike Kestner <mkestner@novell.com>

	* MainWindow.cs : use new StartPage widget. Some refactoring for
	tabbed MDI that I decided not to utilize, but left in the event we
	do in the future. Refactoring for Opening recent documents which the
	StartPage and menu don't support yet. Add toolbar with new/open/save
	items.

2009-08-19  Mike Kestner <mkestner@novell.com>

	* MainWindow.cs : fix crash with StartEnabled handling.

2009-08-19  Mike Kestner <mkestner@novell.com>

	* MainWindow.cs : add logging status ui to enable/disable logging in
	the profiler process.

2009-08-04  Mike Kestner <mkestner@novell.com>

	* MainWindow.cs : update sensitivity of the Show System Nodes action
	to indicate if the option is supported in the current view.

2009-07-15  Mike Kestner <mkestner@novell.com>

	* MainWindow.cs : support file open and save operations.

2009-06-19  Mike Kestner <mkestner@novell.com>

	* MainWindow.cs : add menu item to show/hide system nodes, hidden by
	default.  Use new ProfileView.LoadProfile method.

2009-06-17  Mike Kestner <mkestner@novell.com>

	* MainWindow.cs : Use new ProfileSetupDialog to configure profile
	type and assembly target.  Use temp files for the log file to avoid
	sharing errors on subsequent executions.

2009-06-17  Mike Kestner <mkestner@novell.com>

	* MainWindow.cs : Save is ctrl-s not c.

2009-06-17  Mike Kestner <mkestner@novell.com>

	* MainWindow.cs : add accelerators for stock menu items.

2009-06-11  Mike Kestner <mkestner@novell.com>

	* gtk-gui/* : kill stetic stuff. project is simple enough to avoid it.
	* Main.cs : add license.
	* MainWindow.cs : refactor to non-stetic class.  Move profile loading
	to Widgets.ProfileView. add license.

2009-05-21  Mike Kestner <mkestner@novell.com>
